# astbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  case_formatters.py  case_handlers.py  case_models.py  case_repository.py  case_search.py  case_state.py  config.py  formatters.py  gigachat_client.py  gosplan_api.py  handlers.py  models.py  pyproject.toml  requirements.txt  run_bot.ps1  start_bot.cmd  start_bot.ps1  state.py  status_bot.ps1  stop_bot.ps1
docs/: pilot_rebuild_plan.md
